updated apache conf file references

--- a/playbooks/wordpress/files/apache-ssl.conf.j2
+++ b/playbooks/wordpress/files/apache-ssl.conf.j2
@@ -6,7 +6,7 @@
 
 <VirtualHost *:443>
   Protocols h2 http/1.1
-  ServerAdmin  webmaster@casat.org
+  ServerAdmin  Reset_Smith@resettech.net
   DocumentRoot /var/www/wordpress
   ServerName   {{ ansible_host }}
   ServerAlias  www.{{ ansible_host }}
