--- a/playbooks/wordpress/files/apache.conf.j2
+++ b/playbooks/wordpress/files/apache.conf.j2
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerAdmin  webmaster@casat.org
+  ServerAdmin  Reset_Smith@resettech.net
   ServerName   {{ ansible_host }}
   ServerAlias  www.{{ ansible_host }}
   DocumentRoot /var/www/wordpress
